Adicionando o envio de senha temporaria por email + lint fix
