# backend/src/routes/email.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+
+import { sendRecoveryEmail } from '../controllers/email.controller';
+
+const emailRouter = Router({ mergeParams: true });
+
+emailRouter.get('/sendRecoveryEmail', sendRecoveryEmail);
+
+export default emailRouter;
