# backend/src/swagger.bundle.yaml
@@ -884,6 +884,24 @@ paths:
                       email:
                         type: string
                         example: "joao@email.com"
+  /email/sendRecoveryEmail:
+    get:
+      summary: Send email for password recovery
+      tags:
+        - Email
+      parameters:
+        - in: query
+          name: email
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Email sent successfully
+        '400':
+          description: Invalid input
+        '500':
+          description: Server error
 components:
   schemas:
     CreateUserInput:
